# C-

./: CMakeLists.txt  Hello.cpp
.github/actions/setup-cmake/: action.yml
.github/workflows/: ci.yml
src/: CMakeLists.txt  Hello.cpp  hello.h  main.cpp
